src/test/resources/de/monticore/umlcd4a/cocos/ebnf/valid/C4A12.cd
package de.monticore.umlcd4a.cocos.ebnf.valid;

classdiagram C4A12 {
  class C1 {
    String attr;
  }

  abstract class Profile {
    String profileName;
  }
}
