src/test/resources/de/monticore/umlcd4a/cocos/ebnf/invalid/C4A14.cd
package de.monticore.umlcd4a.cocos.ebnf.invalid;

classdiagram C4A14 {
  class C {
    AnUndefinedType attr;
  }
}